💄 Fix header breaking on mobile

--- a/css/components/header.css
+++ b/css/components/header.css
@@ -7,6 +7,7 @@
 }
 
 .site-header__title {
+  display: flex;
   margin-left: 2rem;
 }
 
